--- a/EmployeeManagementSystem/Views/Shared/_Layout.cshtml
+++ b/EmployeeManagementSystem/Views/Shared/_Layout.cshtml
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - EmployeeManagementSystem</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    @*<link rel="stylesheet" href="~/css/site.css" />
+    <link href="~/css/StyleSheet.css" rel="stylesheet" />*@
+
+    <link rel="stylesheet" href="/css/bundle.css" />
+
 </head>
 <body>
     <header>
